# vcf_to_fasta

./: Cargo.toml
src/: main.rs
